--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@types/node": "12.0.12",
