dependencies for properties load

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "@/themes/*": [
         "./src/themes/*"
       ],
+      "@/components/*": [
+        "./src/components/*"
+      ],
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
