--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint:fix": "eslint ./ --fix"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^16.13.0",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
