added foundation components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,8 @@
     "node_modules"
   ],
   "include": [
-    "next-env.d.ts",
+    "@types/next-env.d.ts",
+    "@types/styled.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ]
