--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^16.13.0",
+    "react-dom": "^17.0.1",
+    "react-is": "^16.8.0",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
@@ -31,7 +32,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "4.0"
+    "typescript": "4.0",
+    "tsconfig-paths": "^3.9.0"
   },
   "license": "MIT"
 }
