--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "typecheck": "tsc",
     "lint:fix": "eslint ./ --fix"
   },
   "dependencies": {
     "lodash": "^4.17.20",
     "next": "latest",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^16.8.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/node": "12.0.12",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@types/styled-components": "5.0.1",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -32,8 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "4.0",
-    "tsconfig-paths": "^3.9.0"
+    "typescript": "^4.0.3"
   },
   "license": "MIT"
 }
