--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc",
-    "lint:fix": "eslint ./ --fix"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "lodash": "^4.17.20",
@@ -19,20 +18,12 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "12.0.12",
+    "@types/react": "16.8.23",
+    "@types/react-dom": "16.8.4",
     "@types/styled-components": "5.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "^7.20.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.0.3"
+    "typescript": "4.0"
   },
   "license": "MIT"
 }
