--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "framer-motion": "^3.6.7",
     "lodash": "^4.17.20",
     "next": "latest",
-    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "prop-types": "^15.7.2",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
