--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       ],
       "@/themes/*": [
         "src/themes/*"
+      ],
+      "@/types/*": [
+        "src/types/*"
       ]
     },
     "esModuleInterop": true,
