--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "@/components/*": [
         "src/components/*"
       ],
+      "@/context/*": [
+        "src/context/*"
+      ],
       "@/themes/*": [
         "src/themes/*"
       ],
