added metadata component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
       "@/context/*": [
         "src/context/*"
       ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
       "@/themes/*": [
         "src/themes/*"
       ],
