--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "framer-motion": "^3.6.7",
     "lodash": "^4.17.20",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "prop-types": "^15.7.2",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
   },
@@ -22,6 +23,7 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "5.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "typescript": "4.0"
