--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-lottie": "^1.2.3",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.7"
@@ -24,6 +25,7 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "5.0.1",
     "babel-plugin-styled-components": "^1.10.0",
