refactor(theme): rename to ColorsType
The colors property at theme were defined wrongly, raising issues on typescript side.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,7 +45,7 @@
     "node_modules"
   ],
   "include": [
-    "@types/next-env.d.ts",
+    "next-env.d.ts",
     "@types/styled.d.ts",
     "**/*.ts",
     "**/*.tsx"
