--- a/package.json
+++ b/package.json
@@ -28,8 +28,16 @@
     "@types/react-lottie": "^1.2.5",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "5.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
     "babel-plugin-styled-components": "^1.10.0",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "4.0"
   },
   "license": "MIT",
