--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@types/lodash": "^4.14.168",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
@@ -38,6 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.2.0",
     "typescript": "4.0"
   },
   "license": "MIT",
