--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@crello/react-lottie": "^0.0.11",
+    "@types/react-lottie": "^1.2.5",
     "framer-motion": "^3.6.7",
     "lodash": "^4.17.20",
     "next": "latest",
@@ -29,7 +31,6 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "@types/react-lottie": "^1.2.5",
     "@types/react-scroll": "^1.8.2",
     "@types/styled-components": "5.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
