--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,23 +18,12 @@
     "removeComments": false,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "baseUrl": ".",
+    "baseUrl": "src",
     "paths": {
-      "@/components/*": [
-        "src/components/*"
-      ],
-      "@/context/*": [
-        "src/context/*"
-      ],
-      "@/lib/*": [
-        "src/lib/*"
-      ],
-      "@/themes/*": [
-        "src/themes/*"
-      ],
-      "@/types/*": [
-        "src/types/*"
-      ]
+      "@/components/*": ["components/*"],
+      "@/context/*": ["context/*"],
+      "@/themes/*": ["themes/*"],
+      "@/types/*": ["types/*"]
     },
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
