--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lodash": "^4.17.20",
     "next": "latest",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.0.0",
@@ -51,5 +51,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
